--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="footer">
         <p>Made with full of &#10084; by .</p>
         <br>
-        <a href="https://planterium.id" target="_blank">Planterium Indonesia.</a>
+        <a href="https://undanganmanten.my.id" target="_blank">Undangan Manten.</a>
     </div>
     
     <script src="js/script.js" type="text/javascript"></script>
