--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             tenteram kepadanya, dan dijadikan-Nya diantaramu rasa kasih dan sayang.
                             Sesungguhnya pada yang demikian itu benar-benar terdapat tanda-tanda 
                             bagi kaum yang berfikir. ”</p>
-                        <h3><b>( Q.S Al Isra: 21 )</b></h3>
+                        <h3><b>( Q.S Ar Rum: 21 )</b></h3>
                     </div>
                 </div>
                 <img data-aos="zoom-in" data-aos-duration="3000" src="asset/image/Mempelai.png" alt="">
